--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "babel-polyfill": "^6.26.0",
     "concurrently": "^4.0.1",
     "cors": "^2.8.5",
@@ -11,6 +11,8 @@
     "moxios": "^0.4.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
+    "react-icons": "^3.9.0",
+    "react-modal": "^3.11.2",
     "react-redux": "^5.1.1",
     "react-scripts": "^2.1.3",
     "redux": "^4.0.1",
